# Makefile.am - m4 Makefile for miredo

# ***********************************************************************
# *  Copyright © 2004-2006 Rémi Denis-Courmont.                         *
# *  This program is free software; you can redistribute and/or modify  *
# *  it under the terms of the GNU General Public License as published  *
# *  by the Free Software Foundation; version 2 of the license.         *
# *                                                                     *
# *  This program is distributed in the hope that it will be useful,    *
# *  but WITHOUT ANY WARRANTY; without even the implied warranty of     *
# *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.               *
# *  See the GNU General Public License for more details.               *
# *                                                                     *
# *  You should have received a copy of the GNU General Public License  *
# *  along with this program; if not, you can get it from:              *
# *  http://www.gnu.org/copyleft/gpl.html                               *
# ***********************************************************************

EXTRA_DIST = \
	binreloc.m4 \
	codeset.m4 \
	flags.m4 \
	getopt.m4 \
	gettext.m4 \
	glibc21.m4 \
	glibc2.m4 \
	hostname.m4 \
	iconv.m4 \
	intdiv0.m4 \
	intldir.m4 \
	intl.m4 \
	intmax.m4 \
	inttypes_h.m4 \
	inttypes-pri.m4 \
	lcmessage.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	lock.m4 \
	longdouble.m4 \
	longlong.m4 \
	nls.m4 \
	po.m4 \
	printf-posix.m4 \
	progtest.m4 \
	size_max.m4 \
	sockaddr.m4 \
	stdint_h.m4 \
	uintmax_t.m4 \
	ulonglong.m4 \
	visibility.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xsize.m4
